<resources>
    <string name="app_name">RiseApp</string>
    <string name="registrat">Registra\'t</string>
    <string name="accedeix">Accedeix</string>
    <string name="password">Contrasenya</string>
    <string name="username">Nombre de usuario</string>
    <string name="emptyStringsError">S\'han d\'omplir tots els camps</string>
    <string name="titleRegistre">Registre</string>
    <string name="repeatPassword">Repeteix contrasenya</string>
    <string name="user_exists_error">Aquest email ja esta registrat</string>
    <string name="user_weakpass_error">La contrasenya es molt curta</string>
    <string name="notEqualPassReg">Les contrasenyes no coincideixen</string>
    <string name="notValidEmail">L\'email no es vàlid</string>
    <string name="info">Informació</string>
    <string name="mapa">Contacta</string>
    <string name="account">Perfil</string>
    <string name="loginIncorrecto">El usuari o contrasenya són incorrectes</string>
    <string name="repeteix_contrasenya">Repeteix contrasenya</string>
    <string name="nom_usuario">Nom</string>
    <string name="ciutat">Ciutat</string>
    <string name="data_de_naixement">Data de naixement</string>
    <string name="ja_tens_un_compte_accedeix_al_teu_compte">Ja tens un compte? Accedeix al teu compte</string>
    <string name="termes_i_condicions">Termes i condicions</string>
    <string name="no_tens_un_compte_registra_t">No tens un compte? Registra\'t</string>
    <string name="accepto_els_termes_i_condicions">Accepto els termes i condicions</string>
    <string name="forum">Fòrum</string>
    <string name="quisom">Quí som?</string>
    <string name="guardar">Desar</string>
    <string name="fecha_de_nacimiento">Data de naixement:</string>
    <string name="Correu">Correu:</string>
    <string name="g_nero">Génere:</string>
    <string name="ciudad">Ciutat:</string>
    <string-array name="genders">
        <item>Escolleix un</item>
        <item>Home</item>
        <item>Dona</item>
    </string-array>
    <string name="title_activity_mapa_prueba">Map</string>
    <string name="nova_ciutat">NOVA CIUTAT</string>
    <string name="fes_te_una_foto">Fes-te una foto</string>
    <string name="des_de_la_galeria">Des de la galeria</string>
    <string name="nou_nom">NOU NOM</string>
    <string name="nova_contrasenya">NOVA CONTRASENYA</string>
    <string name="contrasenya_vella">Contrasenya vella</string>
    <string name="nova_contrasenya_minus">Nova contrasenya</string>
    <string name="nova_ciutat_minus">Nova ciutat</string>
    <string name="correu_electr_nic">CORREU ELECTRÒNIC</string>
    <string name="nou_email">Nou email</string>
    <string name="actualitzar_contra">S\'ha actualitzat la contrasenya</string>
    <string name="contra_incorrecta">Contrasenya errònia</string>
    <string name="ciutat_update">Ciutat actualitzada correctament</string>
    <string name="city_noupdate">No s\'ha pogut actualitzar la ciutat</string>
    <string name="canviar_fto_perfil">Canviar foto de perfil</string>
    <string name="nom_actualitzat">Nom actualitzat</string>
    <string name="noPassUpdate">No s\'ha pogut actualitzar la contrasenya</string>
    <string name="les_meves_dietes">Les meves dietes</string>
    <string name="editar_perfil">Editar perfil</string>
    <string name="tancar_sessio">Tancar sessió</string>
    <string name="genere_actualitzat">Gènere actualitzat</string>
    <string name="genere_noActualitzat">Gènere no actualitzat</string>
    <string name="data_actualitzada">Data actualitzada</string>
    <string name="error_actualitzardata">Error al actualitzar la data</string>
    <string name="torna_al_perfil">Torna enrere</string>
    <string name="correu_actualitzat">Correu actualitzat</string>
    <string name="no_actualitzatCorreu">Correu no actualitzat</string>
    <string name="contacta_amb_nosaltres">CONTACTA AMB NOSALTRES!</string>
    <string name="contacta">Contacta</string>
    <string name="equip">Equip</string>
    <string name="quiSom">Quí som?</string>
    <string name="next">Següent</string>
    <string name="prev">Anterior</string>
    <string name="question">Pregunta</string>
    <string name="finish">Acaba</string>
    <string name="start_over">Torna a començar</string>
    <string name="results">Resultats</string>
    <string name="Perill">Et trobes en un punt de perillositat i problemàtica respecte al teu pes i/o la teva figura personal. Segons la teva situació a partir del resultat del test, et recomanem acudir ràpidament a un servei professional en l’àmbit de la salut mental, concretament especialitzat en els trastorns de la conducta alimentària.</string>
    <string name="Estable">Et trobes en un punt estable respecte al teu pes i/o la teva figura personal. Segons la teva situació a partir del resultat del test, et recomanem seguir les pautes adequades que trobaràs en aquesta app per mantenir una bona salut mental i una millor qualitat de vida.</string>
    <string name="Alerta">Et trobes en un punt d’alerta respecte al teu pes i/o la teva figura personal. Segons la teva situació a partir del resultat del test, et recomanem consultar amb una persona especialista en salut mental els teus dubtes i les teves preocupacions respecte a l’alimentació i el teu aspecte físic.</string>
    <string name="perill_titol">PERILL</string>
    <string name="estable_titol">ESTABLE</string>
    <string name="alerta_titol">ALERTA</string>
    <string name="test">Test</string>
    <string name="telefono">Teléfono</string>
    <string name="direccion">Dirección</string>
    <string name="web" translatable="false">Web</string>
    <string name="email">Email</string>

    <array name="all_questions">
        <item>Quant et preocupa el teu pes i/o la teva figura corporal?:Em preocupa molt.
            :De vegades em preocupa, només en moments puntuals.:No em preocupa gaire.
        </item>
        <item>Quant et preocupa guanyar un o dos kg?:Em fa por guanyar pes.:Ho tinc en compte per
            mantenir el meu benestar físic.:M\'és igual guanyar o perdre uns kg.
        </item>
        <item>Quan va ser l\'última vegada que vas fer una dieta?:Actualment estic a dieta.:Fa temps
            que vaig fer una dieta.:Mai no he fet cap dieta.
        </item>
        <item>Quina importància li dones al pes, respecte a altres aspectes de la teva vida i/o del
            teu dia a dia?:El meu pes és un dels aspectes més importants per a mi.:El meu pes és
            important per a mi, però de la mateixa manera que d\'altres aspectes.:El meu pes no és
            gaire rellevant per a mi, respecte a altres aspectes.
        </item>
        <item>Sols sentir-te malament amb el teu cos?:Sí, la majoria del temp:Només de vegades, en
            certes situacions o èpoques.:No, mai.
        </item>
        <item>Últimament, quants cops has sentit una pèrdua de control i has menjat una gran
            quantitat d\'aliments en poc temps, molt més del que acostumes a menjar
            diàriament?:Bastants cops.:Tan sols un cop.:Cap cop.
        </item>
        <item>Últimament, has utilitzat tècniques com provocar-te el vòmit, usar laxants o deixar de
            menjar intencionadament un seguit d\'hores per controlar el teu pes i/o la teva figura
            corporal?:Sí, he utilitzat aquestes tècniques.:Només he utilitzat una d\'aquestes
            tècniques.:Mai no he utilitzat cap d\'aquestes tècniques.
        </item>
        <item>Tens falta d\'interès pel menjar i l\'alimentació?:Sí, és un tema que m\'incomoda:No
            en tinc molt d\'interès, però sé que és important.:M\'interessen aquests aspectes, per
            la meva bona salut.
        </item>
        <item>Evites certs aliments per la seva textura, la seva temperatura el seu olor, etc, per
            por a què et sentin malament o a experimentar sensacions negatives?:Sí, ho solc fer.:Sí,
            però amb molt pocs aliments.:No, no ho solc fer.
        </item>
        <item>Últimament, has tingut pensaments d\'autoferir-te perquè et sents malament amb el teu
            pes i/o amb la teva figura corporal?:Sí, fins i tot he arribat a fer-ho.:Ho he pensat,
            però no ho he fet.:No ho he pensat.
        </item>
    </array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="gender_home">Home</string>
    <string name="gender_dona">Dona</string>
    <string name="has_olvidado_tu_contrase_a">¿Has olvidado tu contraseña?Click aquí</string>
    <string name="restablecer_pass">Hemos enviado un correo a su cuenta</string>
    <string name="habilitats_socials">HABILITATS SOCIALS</string>
    <string name="alimentacio">ALIMENTACIÓ</string>
    <string name="creencies_falses">CREENCES FALSES TCA</string>
    <string name="riscos">RISCOS TCA</string>
    <string name="senyals_alerta">SENYALS D\'ALERTA</string>
    <string name="tipusTca">TIPUS TCA</string>
    <string name="advertencia">Advertencia</string>
    <string name="cerrar">Cerrar</string>
    <string name="mensajeWarning">Los resultados de este test pueden no ser correctos, en cualquier caso o tipo de duda contacte con un profesional</string>

</resources>
