<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

        <ImageView
            android:id="@+id/avatar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="70dp"
            android:src="@drawable/account_default" />
    <AutoCompleteTextView
        android:id="@+id/et_registro_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="45dp"
        android:drawableStart="@drawable/ic_email_black_24dp"
        android:focusable="false"

        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        />
    <AutoCompleteTextView
        android:id="@+id/et_nom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="8dp"
        android:focusable="false"
        android:autofillHints=""
        android:ems="10"
        android:drawableStart="@drawable/ic_person_black_24dp"
        android:hint="@string/nom_usuario"
        android:inputType="textEmailAddress"
        android:textAlignment="viewStart"
        />

    <AutoCompleteTextView
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="40dp"
        android:autofillHints=""
        android:drawableStart="@drawable/ic_lock_black_24dp"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/password"
        android:inputType="textPassword"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/sp_gender_spinner"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_marginStart="50dp"



            android:dropDownSelector="@android:color/white"
            android:imeOptions="actionNext"
            />

        <View
            android:id="@+id/v_center"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_centerInParent="true" />

        <AutoCompleteTextView
            android:id="@+id/et_dateOfBirth"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginEnd="45dp"

            android:clickable="true"

            android:inputType="none"
            android:focusable="false"
            android:hint="@string/data_de_naixement"

            tools:ignore="KeyboardInaccessibleWidget" />
    </LinearLayout>

    <AutoCompleteTextView
        android:id="@+id/et_registro_ciudad"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="45dp"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/ciutat"
        />




    <Button
        android:id="@+id/btnDesar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/aspecto_boton_azul"
        android:text="@string/guardar"
        />






    </LinearLayout>