<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/avatar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="70dp"
            android:src="@drawable/account_default" />

        <TextView
            android:id="@+id/txtNombreUsuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text=""
            android:textSize="30dp" />

        <TextView
            android:id="@+id/txtEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="70dp"
            android:text="@string/Correu" />

        <TextView
            android:id="@+id/txtFechaNacimiento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="40dp"
            android:text="@string/fecha_de_nacimiento" />

        <TextView
            android:id="@+id/txtGenero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="40dp"
            android:text="@string/g_nero" />

        <TextView
            android:id="@+id/txtCiudad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="40dp"
            android:text="@string/ciudad" />


    </LinearLayout>

    <com.getbase.floatingactionbutton.FloatingActionsMenu
        android:id="@+id/mainfab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="35dp"
        app:fab_labelStyle="@style/custom_fab"
        >

        <com.getbase.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabDietas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
            app:fab_title="Mis dietas"
            app:fab_icon="@drawable/ic_favorite"
            />

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabEditarPerfil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_title="Editar perfil"
            app:fab_icon="@drawable/ic_edit"
            />
        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabCerrarSesion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_title="Cerrar sesión"
            app:fab_icon="@drawable/ic_logout"
            />

    </com.getbase.floatingactionbutton.FloatingActionsMenu>


</android.support.design.widget.CoordinatorLayout>


